--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -27,7 +27,7 @@ jobs:
           make clean
           make html
           git checkout -b gh-pages
-          cp -rf _build/html/* docs/
+          cp -rf build/html/* docs/
           git config --global user.name "${GITHUB_ACTOR}"
           git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git add docs
