--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -31,6 +31,7 @@ jobs:
           git checkout -b gh-pages
           mkdir -p docs
           cp -rf build/html/* docs/
+          touch docs/.nojekill
           git config --global user.name "${GITHUB_ACTOR}"
           git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git add docs
